// Vitest Snapshot v1

exports[`ShapePath > toSketchJSON 转换符合规范 > plus 转换正常 1`] = `
{
  "_class": "shapePath",
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "DB9396C0-127C-4077-B808-FF6F89D0B973",
  "edited": true,
  "exportOptions": {
    "_class": "exportOptions",
    "exportFormats": [],
    "includedLayerIds": [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": {
    "_class": "rect",
    "constrainProportions": false,
    "height": 720,
    "width": 76,
    "x": 474,
    "y": 151.99999999999997,
  },
  "isClosed": true,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isTemplate": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "路径",
  "nameIsFixed": false,
  "pointRadiusBehaviour": 1,
  "points": [
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.10526315789473684, 3.947459643111668e-17}",
      "curveMode": 4,
      "curveTo": "{0.03508771929824561, 3.947459643111668e-17}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.10526315789473684, 3.947459643111668e-17}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.9649122807017543, 3.947459643111668e-17}",
      "curveMode": 4,
      "curveTo": "{0.8947368421052632, 3.947459643111668e-17}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.8947368421052632, 3.947459643111668e-17}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{1, 0.011111111111111151}",
      "curveMode": 4,
      "curveTo": "{1, 0.003703703703703743}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{1, 0.011111111111111151}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{1, 0.9962962962962963}",
      "curveMode": 4,
      "curveTo": "{1, 0.9888888888888889}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{1, 0.9888888888888889}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.8947368421052632, 1}",
      "curveMode": 4,
      "curveTo": "{0.9649122807017543, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.8947368421052632, 1}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.03508771929824562, 1}",
      "curveMode": 4,
      "curveTo": "{0.10526315789473684, 1}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.10526315789473684, 1}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0, 0.9888888888888889}",
      "curveMode": 4,
      "curveTo": "{0, 0.9962962962962963}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0, 0.9888888888888889}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0, 0.0037037037037037437}",
      "curveMode": 4,
      "curveTo": "{0, 0.011111111111111151}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0, 0.011111111111111151}",
    },
  ],
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": {
    "_class": "style",
    "borderOptions": {
      "_class": "borderOptions",
      "dashPattern": [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": [],
    "colorControls": {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "8B0D7B99-4870-4886-9170-B370AD23DF92",
    "endMarkerType": 0,
    "fills": [],
    "innerShadows": [],
    "miterLimit": 10,
    "shadows": [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;

exports[`ShapePath > toSketchJSON 转换符合规范 > upArrow 转换正常 1`] = `
{
  "_class": "shapePath",
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "D9D72741-34BD-40EE-BA27-A3564C5001E7",
  "edited": true,
  "exportOptions": {
    "_class": "exportOptions",
    "exportFormats": [],
    "includedLayerIds": [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": {
    "_class": "rect",
    "constrainProportions": false,
    "height": 262.00241998455107,
    "width": 371.92533073817987,
    "x": 326.0873346309101,
    "y": 356.99758001544893,
  },
  "isClosed": true,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isTemplate": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "路径",
  "nameIsFixed": false,
  "pointRadiusBehaviour": 1,
  "points": [
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.5133248399992646, 0.004690048149804349}",
      "curveMode": 4,
      "curveTo": "{0.5173421906682137, 0.012604540006713702}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.5173421906682137, 0.012604540006713702}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.493128049928784, -7.796914110299981e-17}",
      "curveMode": 3,
      "curveTo": "{0.5068719500712158, -7.796914110299981e-17}",
      "hasCurveFrom": true,
      "hasCurveTo": true,
      "point": "{0.49999999999999994, -7.796914110299981e-17}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.48265780933178615, 0.012604540006713698}",
      "curveMode": 4,
      "curveTo": "{0.48667516000073524, 0.004690048149804346}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.48265780933178615, 0.012604540006713698}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{-0.00614998345600793, 0.9717559860689977}",
      "curveMode": 4,
      "curveTo": "{0.004067121123714938, 0.951527165280577}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.004067121123714938, 0.951527165280577}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.021543747378504056, 1}",
      "curveMode": 4,
      "curveTo": "{0.004067121123714938, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.021543747378504056, 1}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.17506918724749762, 1}",
      "curveMode": 4,
      "curveTo": "{0.14764432758613624, 1}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.14764432758613624, 1}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.21728196143214212, 0.9496187859609146}",
      "curveMode": 4,
      "curveTo": "{0.201149691043106, 0.9812978826673093}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.21728196143214212, 0.9496187859609146}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.4998655644134246, 0.3946620798031108}",
      "curveMode": 1,
      "curveTo": "{0.4998655644134246, 0.3946620798031108}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{0.4998655644134246, 0.3946620798031108}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.7988503089568938, 0.9812978826673091}",
      "curveMode": 4,
      "curveTo": "{0.7827180385678576, 0.9496187859609145}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.7827180385678576, 0.9496187859609145}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.8523556724138635, 1}",
      "curveMode": 4,
      "curveTo": "{0.8246619415793516, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.8523556724138635, 1}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.9959328788762849, 1}",
      "curveMode": 4,
      "curveTo": "{0.9784562526214958, 1}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.9784562526214958, 1}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.9959328788762849, 0.951527165280577}",
      "curveMode": 4,
      "curveTo": "{1.0061499834560077, 0.9717559860689976}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.9959328788762849, 0.951527165280577}",
    },
  ],
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": {
    "_class": "style",
    "borderOptions": {
      "_class": "borderOptions",
      "dashPattern": [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": [],
    "colorControls": {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "FABE1B9C-5262-49CD-9A17-6F5C1529894B",
    "endMarkerType": 0,
    "fills": [],
    "innerShadows": [],
    "miterLimit": 10,
    "shadows": [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;

exports[`ShapePath > toSketchJSON 转换符合规范 > 不规则图形compPath转换正常 1`] = `
{
  "_class": "shapePath",
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "19192A15-128F-4A45-8042-466DE8811CB7",
  "edited": true,
  "exportOptions": {
    "_class": "exportOptions",
    "exportFormats": [],
    "includedLayerIds": [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": {
    "_class": "rect",
    "constrainProportions": false,
    "height": 538.2161135860229,
    "width": 736.371094,
    "x": 4,
    "y": 280.00000024911,
  },
  "isClosed": true,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isTemplate": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "路径",
  "nameIsFixed": false,
  "pointRadiusBehaviour": 1,
  "points": [
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.6980017075466572, -0.020465632616830685}",
      "curveMode": 4,
      "curveTo": "{0.09400512426958466, 0.004399496208155765}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.09400512426958466, 0.004399496208155765}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{1, 0.5249051517030365}",
      "curveMode": 3,
      "curveTo": "{1, 0.060069027914235316}",
      "hasCurveFrom": true,
      "hasCurveTo": true,
      "point": "{1, 0.24600347780135365}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.7902668800304646, 0.9941781920755667}",
      "curveMode": 3,
      "curveTo": "{0.954103919510996, 0.7606873566513045}",
      "hasCurveFrom": true,
      "hasCurveTo": true,
      "point": "{0.8986796526806632, 0.8396747353768307}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.25688156086148595, 0.8202868078573917}",
      "curveMode": 3,
      "curveTo": "{0.5121451793435009, 1.0125548715363522}",
      "hasCurveFrom": true,
      "hasCurveTo": true,
      "point": "{0.32066563710063284, 0.9941781920755667}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0, 0.54233106252817}",
      "curveMode": 4,
      "curveTo": "{0.14999301561394532, 0.6696710961502698}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0, 0.54233106252817}",
    },
  ],
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": {
    "_class": "style",
    "borderOptions": {
      "_class": "borderOptions",
      "dashPattern": [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": [],
    "colorControls": {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "78941BBD-73B0-444B-A046-56B382FE5AA3",
    "endMarkerType": 0,
    "fills": [],
    "innerShadows": [],
    "miterLimit": 10,
    "shadows": [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;

exports[`ShapePath > toSketchJSON 转换符合规范 > 圆角矩形 roundRect 转换正常 1`] = `
{
  "_class": "shapePath",
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "D2AE9C2C-CC11-4A1A-B36C-A9C1F617E9CC",
  "edited": true,
  "exportOptions": {
    "_class": "exportOptions",
    "exportFormats": [],
    "includedLayerIds": [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": {
    "_class": "rect",
    "constrainProportions": false,
    "height": 76,
    "width": 736,
    "x": 144,
    "y": 474,
  },
  "isClosed": true,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isTemplate": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "路径",
  "nameIsFixed": false,
  "pointRadiusBehaviour": 1,
  "points": [
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.9891304347826086, 0}",
      "curveMode": 4,
      "curveTo": "{0.9951086956521739, 0}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.9891304347826086, 0}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.0048913043478260865, 0}",
      "curveMode": 4,
      "curveTo": "{0.010869565217391304, 0}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.010869565217391304, 0}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0, 0.10526315789473684}",
      "curveMode": 4,
      "curveTo": "{0, 0.04736842105263158}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0, 0.10526315789473684}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0, 0.9526315789473685}",
      "curveMode": 4,
      "curveTo": "{0, 0.8947368421052632}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0, 0.8947368421052632}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.010869565217391304, 1}",
      "curveMode": 4,
      "curveTo": "{0.004891304347826087, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.010869565217391304, 1}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.9951086956521739, 1}",
      "curveMode": 4,
      "curveTo": "{0.9891304347826086, 1}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.9891304347826086, 1}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{1, 0.8947368421052632}",
      "curveMode": 4,
      "curveTo": "{1, 0.9526315789473685}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{1, 0.8947368421052632}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{1, 0.047368421052631574}",
      "curveMode": 4,
      "curveTo": "{1, 0.10526315789473684}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{1, 0.10526315789473684}",
    },
  ],
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": {
    "_class": "style",
    "borderOptions": {
      "_class": "borderOptions",
      "dashPattern": [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": [],
    "colorControls": {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "D09A3E9C-D9ED-49EB-AC45-518FF7BD0475",
    "endMarkerType": 0,
    "fills": [],
    "innerShadows": [],
    "miterLimit": 10,
    "shadows": [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;

exports[`ShapePath > toSketchJSON 转换符合规范 > 带圆角的矩形 rectRound2 转换正常 1`] = `
{
  "_class": "shapePath",
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "E6D242CE-DDE1-44D8-AE5B-B28A5B9CFF7F",
  "edited": true,
  "exportOptions": {
    "_class": "exportOptions",
    "exportFormats": [],
    "includedLayerIds": [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": {
    "_class": "rect",
    "constrainProportions": false,
    "height": 229.328125,
    "width": 280.65234399999997,
    "x": 460,
    "y": 4,
  },
  "isClosed": true,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isTemplate": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "路径",
  "nameIsFixed": false,
  "pointRadiusBehaviour": 1,
  "points": [
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0, 0}",
      "curveMode": 1,
      "curveTo": "{0, 0}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{0, 0}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.8404733615907374, 0}",
      "curveMode": 4,
      "curveTo": "{0.6436872802316591, 0}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.6436872802316591, 0}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{1, 0.4360564147986646}",
      "curveMode": 4,
      "curveTo": "{1, 0.1952291067656878}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{1, 0.4360564147986646}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{1, 1}",
      "curveMode": 1,
      "curveTo": "{1, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{1, 1}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0, 1}",
      "curveMode": 1,
      "curveTo": "{0, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{0, 1}",
    },
  ],
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": {
    "_class": "style",
    "borderOptions": {
      "_class": "borderOptions",
      "dashPattern": [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": [],
    "colorControls": {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "F56AF1B5-8B5D-49DB-8C91-1496E295F8A5",
    "endMarkerType": 0,
    "fills": [],
    "innerShadows": [],
    "miterLimit": 10,
    "shadows": [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;

exports[`ShapePath > toSketchJSON 转换符合规范 > 开放矩形 unclosedRect 转换正常 1`] = `
{
  "_class": "shapePath",
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "2551C71C-C064-4925-975F-7F23AE117ED2",
  "edited": true,
  "exportOptions": {
    "_class": "exportOptions",
    "exportFormats": [],
    "includedLayerIds": [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": {
    "_class": "rect",
    "constrainProportions": false,
    "height": 229.328125,
    "width": 280.652344,
    "x": 68,
    "y": 4,
  },
  "isClosed": false,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isTemplate": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "路径",
  "nameIsFixed": false,
  "pointRadiusBehaviour": 1,
  "points": [
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0, 0}",
      "curveMode": 1,
      "curveTo": "{0, 0}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{0, 0}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0.8404733615907372, 0}",
      "curveMode": 4,
      "curveTo": "{0.6436872802316591, 0}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.6436872802316591, 0}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{1, 0.4360564147986646}",
      "curveMode": 4,
      "curveTo": "{1, 0.1952291067656878}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{1, 0.4360564147986646}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{1, 1}",
      "curveMode": 1,
      "curveTo": "{1, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{1, 1}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0, 1}",
      "curveMode": 1,
      "curveTo": "{0, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{0, 1}",
    },
  ],
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": {
    "_class": "style",
    "borderOptions": {
      "_class": "borderOptions",
      "dashPattern": [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": [],
    "colorControls": {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "CCC6F354-46A6-4415-B016-4E5ABA4E7F53",
    "endMarkerType": 0,
    "fills": [],
    "innerShadows": [],
    "miterLimit": 10,
    "shadows": [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;

exports[`ShapePath > toSketchJSON 转换符合规范 > 正方形 rect 转换正常 1`] = `
{
  "_class": "shapePath",
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "A97F19D1-073D-4C17-A72F-704627177123",
  "edited": true,
  "exportOptions": {
    "_class": "exportOptions",
    "exportFormats": [],
    "includedLayerIds": [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": {
    "_class": "rect",
    "constrainProportions": false,
    "height": 229.32812499999994,
    "width": 280.652344,
    "x": 288.371094,
    "y": 399.757812,
  },
  "isClosed": true,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isTemplate": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "路径",
  "nameIsFixed": false,
  "pointRadiusBehaviour": 1,
  "points": [
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0, 0}",
      "curveMode": 1,
      "curveTo": "{0, 0}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{0, 0}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{1, 0}",
      "curveMode": 1,
      "curveTo": "{1, 0}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{1, 0}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{1, 1}",
      "curveMode": 1,
      "curveTo": "{1, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{1, 1}",
    },
    {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "cornerStyle": 0,
      "curveFrom": "{0, 1}",
      "curveMode": 1,
      "curveTo": "{0, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{0, 1}",
    },
  ],
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": {
    "_class": "style",
    "borderOptions": {
      "_class": "borderOptions",
      "dashPattern": [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": [],
    "colorControls": {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "C82CF717-FD87-41B4-923A-1393134D4277",
    "endMarkerType": 0,
    "fills": [],
    "innerShadows": [],
    "miterLimit": 10,
    "shadows": [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;

exports[`ShapePath toSketchJSON 转换符合规范 plus 转换正常 1`] = `
Object {
  "_class": "shapePath",
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "UUID",
  "edited": true,
  "exportOptions": Object {
    "_class": "exportOptions",
    "exportFormats": Array [],
    "includedLayerIds": Array [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": Object {
    "_class": "rect",
    "constrainProportions": false,
    "height": 720,
    "width": 76,
    "x": 474,
    "y": 151.99999999999997,
  },
  "isClosed": true,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "路径",
  "nameIsFixed": false,
  "pointRadiusBehaviour": 1,
  "points": Array [
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.10526315789473684, 3.947459643111668e-17}",
      "curveMode": 4,
      "curveTo": "{0.03508771929824561, 3.947459643111668e-17}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.10526315789473684, 3.947459643111668e-17}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.9649122807017543, 3.947459643111668e-17}",
      "curveMode": 4,
      "curveTo": "{0.8947368421052632, 3.947459643111668e-17}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.8947368421052632, 3.947459643111668e-17}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{1, 0.011111111111111151}",
      "curveMode": 4,
      "curveTo": "{1, 0.003703703703703743}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{1, 0.011111111111111151}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{1, 0.9962962962962963}",
      "curveMode": 4,
      "curveTo": "{1, 0.9888888888888889}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{1, 0.9888888888888889}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.8947368421052632, 1}",
      "curveMode": 4,
      "curveTo": "{0.9649122807017543, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.8947368421052632, 1}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.03508771929824562, 1}",
      "curveMode": 4,
      "curveTo": "{0.10526315789473684, 1}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.10526315789473684, 1}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0, 0.9888888888888889}",
      "curveMode": 4,
      "curveTo": "{0, 0.9962962962962963}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0, 0.9888888888888889}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0, 0.0037037037037037437}",
      "curveMode": 4,
      "curveTo": "{0, 0.011111111111111151}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0, 0.011111111111111151}",
    },
  ],
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": Object {
    "_class": "style",
    "borderOptions": Object {
      "_class": "borderOptions",
      "dashPattern": Array [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": Array [],
    "colorControls": Object {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": Object {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "UUID",
    "endMarkerType": 0,
    "fills": Array [],
    "innerShadows": Array [],
    "miterLimit": 10,
    "shadows": Array [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;

exports[`ShapePath toSketchJSON 转换符合规范 upArrow 转换正常 1`] = `
Object {
  "_class": "shapePath",
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "UUID",
  "edited": true,
  "exportOptions": Object {
    "_class": "exportOptions",
    "exportFormats": Array [],
    "includedLayerIds": Array [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": Object {
    "_class": "rect",
    "constrainProportions": false,
    "height": 262.00241998455107,
    "width": 371.92533073817987,
    "x": 326.0873346309101,
    "y": 356.99758001544893,
  },
  "isClosed": true,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "路径",
  "nameIsFixed": false,
  "pointRadiusBehaviour": 1,
  "points": Array [
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.5133248399992646, 0.004690048149804349}",
      "curveMode": 4,
      "curveTo": "{0.5173421906682137, 0.012604540006713702}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.5173421906682137, 0.012604540006713702}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.493128049928784, -7.796914110299981e-17}",
      "curveMode": 3,
      "curveTo": "{0.5068719500712158, -7.796914110299981e-17}",
      "hasCurveFrom": true,
      "hasCurveTo": true,
      "point": "{0.49999999999999994, -7.796914110299981e-17}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.48265780933178615, 0.012604540006713698}",
      "curveMode": 4,
      "curveTo": "{0.48667516000073524, 0.004690048149804346}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.48265780933178615, 0.012604540006713698}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{-0.00614998345600793, 0.9717559860689977}",
      "curveMode": 4,
      "curveTo": "{0.004067121123714938, 0.951527165280577}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.004067121123714938, 0.951527165280577}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.021543747378504056, 1}",
      "curveMode": 4,
      "curveTo": "{0.004067121123714938, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.021543747378504056, 1}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.17506918724749762, 1}",
      "curveMode": 4,
      "curveTo": "{0.14764432758613624, 1}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.14764432758613624, 1}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.21728196143214212, 0.9496187859609146}",
      "curveMode": 4,
      "curveTo": "{0.201149691043106, 0.9812978826673093}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.21728196143214212, 0.9496187859609146}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.4998655644134246, 0.3946620798031108}",
      "curveMode": 1,
      "curveTo": "{0.4998655644134246, 0.3946620798031108}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{0.4998655644134246, 0.3946620798031108}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.7988503089568938, 0.9812978826673091}",
      "curveMode": 4,
      "curveTo": "{0.7827180385678576, 0.9496187859609145}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.7827180385678576, 0.9496187859609145}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.8523556724138635, 1}",
      "curveMode": 4,
      "curveTo": "{0.8246619415793516, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.8523556724138635, 1}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.9959328788762849, 1}",
      "curveMode": 4,
      "curveTo": "{0.9784562526214958, 1}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.9784562526214958, 1}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.9959328788762849, 0.951527165280577}",
      "curveMode": 4,
      "curveTo": "{1.0061499834560077, 0.9717559860689976}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.9959328788762849, 0.951527165280577}",
    },
  ],
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": Object {
    "_class": "style",
    "borderOptions": Object {
      "_class": "borderOptions",
      "dashPattern": Array [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": Array [],
    "colorControls": Object {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": Object {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "UUID",
    "endMarkerType": 0,
    "fills": Array [],
    "innerShadows": Array [],
    "miterLimit": 10,
    "shadows": Array [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;

exports[`ShapePath toSketchJSON 转换符合规范 不规则图形compPath转换正常 1`] = `
Object {
  "_class": "shapePath",
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "UUID",
  "edited": true,
  "exportOptions": Object {
    "_class": "exportOptions",
    "exportFormats": Array [],
    "includedLayerIds": Array [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": Object {
    "_class": "rect",
    "constrainProportions": false,
    "height": 538.2161135860229,
    "width": 736.371094,
    "x": 4,
    "y": 280.00000024911,
  },
  "isClosed": true,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "路径",
  "nameIsFixed": false,
  "pointRadiusBehaviour": 1,
  "points": Array [
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.6980017075466572, -0.020465632616830685}",
      "curveMode": 4,
      "curveTo": "{0.09400512426958466, 0.004399496208155765}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.09400512426958466, 0.004399496208155765}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{1, 0.5249051517030365}",
      "curveMode": 3,
      "curveTo": "{1, 0.060069027914235316}",
      "hasCurveFrom": true,
      "hasCurveTo": true,
      "point": "{1, 0.24600347780135365}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.7902668800304646, 0.9941781920755667}",
      "curveMode": 3,
      "curveTo": "{0.954103919510996, 0.7606873566513045}",
      "hasCurveFrom": true,
      "hasCurveTo": true,
      "point": "{0.8986796526806632, 0.8396747353768307}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.25688156086148595, 0.8202868078573917}",
      "curveMode": 3,
      "curveTo": "{0.5121451793435009, 1.0125548715363522}",
      "hasCurveFrom": true,
      "hasCurveTo": true,
      "point": "{0.32066563710063284, 0.9941781920755667}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0, 0.54233106252817}",
      "curveMode": 4,
      "curveTo": "{0.14999301561394532, 0.6696710961502698}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0, 0.54233106252817}",
    },
  ],
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": Object {
    "_class": "style",
    "borderOptions": Object {
      "_class": "borderOptions",
      "dashPattern": Array [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": Array [],
    "colorControls": Object {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": Object {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "UUID",
    "endMarkerType": 0,
    "fills": Array [],
    "innerShadows": Array [],
    "miterLimit": 10,
    "shadows": Array [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;

exports[`ShapePath toSketchJSON 转换符合规范 圆角矩形 roundRect 转换正常 1`] = `
Object {
  "_class": "shapePath",
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "UUID",
  "edited": true,
  "exportOptions": Object {
    "_class": "exportOptions",
    "exportFormats": Array [],
    "includedLayerIds": Array [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": Object {
    "_class": "rect",
    "constrainProportions": false,
    "height": 76,
    "width": 736,
    "x": 144,
    "y": 474,
  },
  "isClosed": true,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "路径",
  "nameIsFixed": false,
  "pointRadiusBehaviour": 1,
  "points": Array [
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.9891304347826086, 0}",
      "curveMode": 4,
      "curveTo": "{0.9951086956521739, 0}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.9891304347826086, 0}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.0048913043478260865, 0}",
      "curveMode": 4,
      "curveTo": "{0.010869565217391304, 0}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.010869565217391304, 0}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0, 0.10526315789473684}",
      "curveMode": 4,
      "curveTo": "{0, 0.04736842105263158}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0, 0.10526315789473684}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0, 0.9526315789473685}",
      "curveMode": 4,
      "curveTo": "{0, 0.8947368421052632}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0, 0.8947368421052632}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.010869565217391304, 1}",
      "curveMode": 4,
      "curveTo": "{0.004891304347826087, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{0.010869565217391304, 1}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.9951086956521739, 1}",
      "curveMode": 4,
      "curveTo": "{0.9891304347826086, 1}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.9891304347826086, 1}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{1, 0.8947368421052632}",
      "curveMode": 4,
      "curveTo": "{1, 0.9526315789473685}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{1, 0.8947368421052632}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{1, 0.047368421052631574}",
      "curveMode": 4,
      "curveTo": "{1, 0.10526315789473684}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{1, 0.10526315789473684}",
    },
  ],
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": Object {
    "_class": "style",
    "borderOptions": Object {
      "_class": "borderOptions",
      "dashPattern": Array [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": Array [],
    "colorControls": Object {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": Object {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "UUID",
    "endMarkerType": 0,
    "fills": Array [],
    "innerShadows": Array [],
    "miterLimit": 10,
    "shadows": Array [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;

exports[`ShapePath toSketchJSON 转换符合规范 带圆角的矩形 rectRound2 转换正常 1`] = `
Object {
  "_class": "shapePath",
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "UUID",
  "edited": true,
  "exportOptions": Object {
    "_class": "exportOptions",
    "exportFormats": Array [],
    "includedLayerIds": Array [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": Object {
    "_class": "rect",
    "constrainProportions": false,
    "height": 229.328125,
    "width": 280.65234399999997,
    "x": 460,
    "y": 4,
  },
  "isClosed": true,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "路径",
  "nameIsFixed": false,
  "pointRadiusBehaviour": 1,
  "points": Array [
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0, 0}",
      "curveMode": 1,
      "curveTo": "{0, 0}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{0, 0}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.8404733615907374, 0}",
      "curveMode": 4,
      "curveTo": "{0.6436872802316591, 0}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.6436872802316591, 0}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{1, 0.4360564147986646}",
      "curveMode": 4,
      "curveTo": "{1, 0.1952291067656878}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{1, 0.4360564147986646}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{1, 1}",
      "curveMode": 1,
      "curveTo": "{1, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{1, 1}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0, 1}",
      "curveMode": 1,
      "curveTo": "{0, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{0, 1}",
    },
  ],
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": Object {
    "_class": "style",
    "borderOptions": Object {
      "_class": "borderOptions",
      "dashPattern": Array [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": Array [],
    "colorControls": Object {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": Object {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "UUID",
    "endMarkerType": 0,
    "fills": Array [],
    "innerShadows": Array [],
    "miterLimit": 10,
    "shadows": Array [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;

exports[`ShapePath toSketchJSON 转换符合规范 开放矩形 unclosedRect 转换正常 1`] = `
Object {
  "_class": "shapePath",
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "UUID",
  "edited": true,
  "exportOptions": Object {
    "_class": "exportOptions",
    "exportFormats": Array [],
    "includedLayerIds": Array [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": Object {
    "_class": "rect",
    "constrainProportions": false,
    "height": 229.328125,
    "width": 280.652344,
    "x": 68,
    "y": 4,
  },
  "isClosed": false,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "路径",
  "nameIsFixed": false,
  "pointRadiusBehaviour": 1,
  "points": Array [
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0, 0}",
      "curveMode": 1,
      "curveTo": "{0, 0}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{0, 0}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0.8404733615907372, 0}",
      "curveMode": 4,
      "curveTo": "{0.6436872802316591, 0}",
      "hasCurveFrom": true,
      "hasCurveTo": false,
      "point": "{0.6436872802316591, 0}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{1, 0.4360564147986646}",
      "curveMode": 4,
      "curveTo": "{1, 0.1952291067656878}",
      "hasCurveFrom": false,
      "hasCurveTo": true,
      "point": "{1, 0.4360564147986646}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{1, 1}",
      "curveMode": 1,
      "curveTo": "{1, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{1, 1}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0, 1}",
      "curveMode": 1,
      "curveTo": "{0, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{0, 1}",
    },
  ],
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": Object {
    "_class": "style",
    "borderOptions": Object {
      "_class": "borderOptions",
      "dashPattern": Array [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": Array [],
    "colorControls": Object {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": Object {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "UUID",
    "endMarkerType": 0,
    "fills": Array [],
    "innerShadows": Array [],
    "miterLimit": 10,
    "shadows": Array [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;

exports[`ShapePath toSketchJSON 转换符合规范 正方形 rect 转换正常 1`] = `
Object {
  "_class": "shapePath",
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "UUID",
  "edited": true,
  "exportOptions": Object {
    "_class": "exportOptions",
    "exportFormats": Array [],
    "includedLayerIds": Array [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": Object {
    "_class": "rect",
    "constrainProportions": false,
    "height": 229.32812499999994,
    "width": 280.652344,
    "x": 288.371094,
    "y": 399.757812,
  },
  "isClosed": true,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "name": "路径",
  "nameIsFixed": false,
  "pointRadiusBehaviour": 1,
  "points": Array [
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0, 0}",
      "curveMode": 1,
      "curveTo": "{0, 0}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{0, 0}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{1, 0}",
      "curveMode": 1,
      "curveTo": "{1, 0}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{1, 0}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{1, 1}",
      "curveMode": 1,
      "curveTo": "{1, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{1, 1}",
    },
    Object {
      "_class": "curvePoint",
      "cornerRadius": 0,
      "curveFrom": "{0, 1}",
      "curveMode": 1,
      "curveTo": "{0, 1}",
      "hasCurveFrom": false,
      "hasCurveTo": false,
      "point": "{0, 1}",
    },
  ],
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": Object {
    "_class": "style",
    "borderOptions": Object {
      "_class": "borderOptions",
      "dashPattern": Array [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": Array [],
    "colorControls": Object {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": Object {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "UUID",
    "endMarkerType": 0,
    "fills": Array [],
    "innerShadows": Array [],
    "miterLimit": 10,
    "shadows": Array [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
}
`;
